--- a/manifests/azure-vote-frontend-deployment.yaml
+++ b/manifests/azure-vote-frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: azure-vote-front
-          image: acrprivregistry.azurecr.io/azure-voting-app
+          image: <Your_ACR_NAME>.azurecr.io/azure-voting-app
           ports:
             - containerPort: 80
           env:
