--- a/.github/workflows/github-action-arc-app-deploy.yaml
+++ b/.github/workflows/github-action-arc-app-deploy.yaml
@@ -81,7 +81,7 @@ jobs:
           echo "::set-output name=password::${ACR_PASSWORD}"
         id: get-acr-creds
 
-      # Creates a kubernetes secret on your Azure Kubernetes Service cluster that matches up to the credentials from the last step
+      # Creates, a kubernetes secret on your Azure Kubernetes Service cluster that matches up to the credentials from the last step
       - name: Create K8s secret for pulling image from ACR
         uses: Azure/k8s-create-secret@v1.1
         with:
